java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/incomplete.java
// IDEA-369310
@SuppressWarnings("unused".<error descr="Identifier expected">)</error>
class X {}